Update auth docs
